[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Edit_line.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto-Light.ttf" type="DynamicFontData" id=2]


[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.737255, 0.737255, 0.737255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[node name="LineEdit" type="LineEdit"]
margin_left = 166.0
margin_top = 117.0
margin_right = 612.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
align = 1
max_length = 30
editable = false
placeholder_text = "HEADING"
placeholder_alpha = 0.1
caret_blink = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_LineEdit_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LineEdit_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LineEdit_mouse_exited"]
